[tool.poetry]
name = "docling-sandbox"
version = "0.1.0"
description = ""
authors = ["Fernando Bittencourt <aaronmorlocks@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
docling = "^2.28.1"
certifi = "^2025.1.31"
psutil = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
