[tool.poetry]
name = "ai-docling-sandbox"
version = "0.1.0"
description = ""
authors = ["Fernando Bittencourt <aaronmorlocks@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11.11"
certifi = "^2025.1.31"
psutil = "^7.0.0"
pymupdf = "^1.25.4"
docling = "^2.28.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
