
[tool.poetry]
name = "langchain-poetry-analyzer"
version = "0.1.0"
description = "A tool to analyze and compare poetry using LangChain and OpenAI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-core = "^0.1.10"
langchain-community = "^0.0.13"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
